--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="fontawesome/css/all.min.css">
+        <meta name="viewport" content="width=device-width"/>
         <title>CV Anaïs Martell: Développeur Web</title>
     </head>
 
