--- a/index.html
+++ b/index.html
@@ -64,10 +64,13 @@
       
 	<!--beginning bloc right-->
 		<section id="bloc_right">
+			
+		<div id="blocheader">
      		<header>
             	<h1><span class="titlecolor">ANAÏS</span> MARTELL</h1>
             	<p><span class="border">Dével</span>oppeuse web freelance</p>
-        	</header>
+			</header>
+		</div>
 
         <section id="maincontentright">
 
@@ -181,7 +184,7 @@
          				</ul>
          			</div>
 				
-					<div class="secondrecommendation">
+					<div id="secondrecommandation">
          				<ul>
          					<li class="name">ALAIN COSTES</li>
          					<li class="function">Associé, Mapping Conseils</li>
