--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 
 	<!--beginning bloc left-->
         <section id="bloc_left">
-             <div class='photoanais'><a href=''><img class ='photoanais' src='images/photoanais.png' alt='photoanais' border=''></a></div>
+             <div class='photoanais'><a href=''><img class ='photoanais' src='images/photoanais.png' alt='photoanais'></a></div>
                 <article id="contact">
                 	<div class="titleleft">CONTACT</div>
                 		<ul>
-                			<strong><li>Adresse</li></strong>
+                			<li>Adresse</li>
                 			<li>Toulouse, France</li>
                 		</ul>
                 		<ul>
-                			<strong><li>Téléphone</li></strong>
+                			<li>Téléphone</li>
                 			<li>0628470484</li>
                 		</ul>
                 		<ul>
-                			<strong><li>Email</li></strong>
+                			<li>Email</li>
                 			<li>martell.anais@gmail.com</li>
                 		</ul>
                 		<ul>
-                			<strong><li>Linkdln</li></strong>
+                			<li>Linkdln</li>
                 			<li><a href="https://www.linkedin.com/in/ana%C3%AFs-martell-b8571412a/" target="_blank">Voir mon profil</a></li>
                         </ul>
                 		<ul>
@@ -50,14 +50,14 @@
                 		Diplômée de sciences politiques et de management, j'ai souhaitais m'orienter dans le métier du 
                 		conseil aux entreprises. Cela fait plus de deux ans que je travaille dans le cabinet Mapping Conseils 
                 		en tant que Consultante. Dans le cadre de ce poste j'ai été amenée à prendre en charge un projet interne 
-                		à l'entreprise et ambitieux à savoir: la conception et le développement d'un Saas. </br> </br>
+                		à l'entreprise et ambitieux à savoir: la conception et le développement d'un Saas. </br>
                     	Dans le cadre de ce projet, en tant que Product Manager j'ai acquis de nombreuses connaissances 
                     	et compétences en gestion de projets. J'ai eu l'opportunité de travailler avec des développeurs, de 
                     	réaliser de nombreux tests, de manager une équipe produit. J'ai développé une forte 
-                    	curiosité pour le développement web. </br></br>
+                    	curiosité pour le développement web. </br>
                     	Grâce à OpenclassRooms j'ai pu suivre de nombreux cours à distance qui me font aujourd'hui repenser 
                     	mon projet professionnel. Je souhaite me former au développement web, c'est la raison pour laquelle de 
-                    	je me suis inscrite au parcours diplômant d'OpenClassRooms "Développeur web". </br></br>
+                    	je me suis inscrite au parcours diplômant d'OpenClassRooms "Développeur web". </br>
                     	Cette formation m'a d'ores et déjà permise d'acquérir de nombreuses connaissances et compétences en 
                     	création de page web grâce à HTML, à leur mise en page grâce à CSS et à leur animation grâce à 
                     	Javascript. Par ailleurs, je maîtrise la responsivité, la maintenance et la mise à jour des sites internet. 
@@ -67,9 +67,9 @@
                 <article id="lobbies">
                 		<div class="titleleft">LOISIRS</div>
                        		<div class="icons">
-                				<div class="iconslobbies"><i class="fas fa-2x fa-plane-departure"> </i></div>
+                				<div class="iconslobbies"><i class="fas fa-2x fa-plane-departure"></i></div>
                 				<div class="iconslobbies"><i class="fas fa-2x fa-swimmer"> </i></div>
-                				<div class="iconslobbies"><i class="fas fa-2x fa-film"a> </i></div>
+                				<div class="iconslobbies"><i class="fas fa-2x fa-film"></i></div>
                         	</div>
                 </article> 
              </section>
@@ -131,9 +131,9 @@
          					<p class="intitule">Double diplôme : Diplôme Institut d'Etudes Politiques et Master 2 - Management de l'innovation TSM</p>
          					<p class="description">
          						<u>2013 - 2015</u> : Sciences Po Toulouse - Licence : 
-         						Tronc commun: sciences politiques, économie, droit, sociologie. </br>
+         						Tronc commun: sciences politiques, économie, droit, sociologie. 
          						<u>2016 - 2018</u> Sciences Po Toulouse - Master de spécialisation " Stratégie d'entreprise et Affaires Internationales": stratégie d'entreprise, marketing international, commerce international, 
-         						gestion d'entreprise, finances, ressources humaines.</br>
+         						gestion d'entreprise, finances, ressources humaines.
          						<u>2017-2018</u>: Toulouse School of Management - Master 2 Management de l'innovation. 
          						Objectifs de la formation: concevoir et évaluer d’une manière critique une stratégie d’innovation, 
          						maîtriser les outils de création d’entreprise, maîtriser les aspects juridiques de 
