--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                         conseil aux entreprises. Cela fait plus de deux ans que je travaille dans le cabinet Mapping Conseils 
                         en tant que Consultante. Dans le cadre de ce poste j'ai été amenée à prendre en charge un projet interne 
                         à l'entreprise et ambitieux à savoir: la conception et le développement d'un Saas. 
-                        </br> 
+                        <br>
                         Dans le cadre de ce projet, en tant que Product Manager j'ai acquis de nombreuses connaissances 
                         et compétences en gestion de projets. J'ai eu l'opportunité de travailler avec des développeurs, de 
                         réaliser de nombreux tests, de manager une équipe produit. J'ai développé une forte 
                         curiosité pour le développement web.
-                        </br>
+                        <br>
                         Grâce à OpenclassRooms j'ai pu suivre de nombreux cours à distance qui me font aujourd'hui repenser 
                         mon projet professionnel. Je souhaite me former au développement web, c'est la raison pour laquelle de 
                         je me suis inscrite au parcours diplômant d'OpenClassRooms "Développeur web". 
-                        </br>
+                        <br>
                         Cette formation m'a d'ores et déjà permise d'acquérir de nombreuses connaissances et compétences en 
                         création de page web grâce à HTML, à leur mise en page grâce à CSS et à leur animation grâce à 
                         Javascript. Par ailleurs, je maîtrise la responsivité, la maintenance et la mise à jour des sites internet. 
@@ -71,8 +71,8 @@
                         <div class="titleleft">LOISIRS</div>
                             <div class="icons">
                                 <div class="iconslobbies"><i class="fas fa-2x fa-plane-departure"> </i></div>
-                                <div class="iconslobbies"><i class="fas fa-2x fa-swimmer"> </i></div>
-                                <div class="iconslobbies"><i class="fas fa-2x fa-film"a> </i></div>
+                                <div class="iconslobbies"><i class="fas fa-2x fa-swimmer"></i></div>
+                                <div class="iconslobbies"><i class="fas fa-2x fa-film"> </i></div>
                             </div>
                 </article> 
              </section>
@@ -134,9 +134,9 @@
                             <p class="intitule">Double diplôme : Diplôme Institut d'Etudes Politiques et Master 2 - Management de l'innovation TSM</p>
                             <p class="description">
                                 <u>2013 - 2015</u> : Sciences Po Toulouse - Licence : 
-                                Tronc commun: sciences politiques, économie, droit, sociologie.</br>
+                                Tronc commun: sciences politiques, économie, droit, sociologie.<br>
                                 <u>2016 - 2018</u> Sciences Po Toulouse - Master de spécialisation " Stratégie d'entreprise et Affaires Internationales": stratégie d'entreprise, marketing international, commerce international, 
-                                gestion d'entreprise, finances, ressources humaines.</br>
+                                gestion d'entreprise, finances, ressources humaines.<br>
                                 <u>2017-2018</u>: Toulouse School of Management - Master 2 Management de l'innovation. 
                                 Objectifs de la formation: concevoir et évaluer d’une manière critique une stratégie d’innovation, 
                                 maîtriser les outils de création d’entreprise, maîtriser les aspects juridiques de 
