no error end tag

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <!--référencement facebook Open graph data -->
     	<meta property="og:title" content="CV" />
     	<meta property="og:type" content="website" />
-  		<meta property="og:url"content="https://anaismartell.github.io/P2_MARTELL_ANAIS/"/>
-  		<meta property="og:description"content="CV présentant Anaïs Martell un développeuse web freelance motivée, travailleuse et enthousiaste"/>
+  		<meta property="og:url" content="https://anaismartell.github.io/P2_MARTELL_ANAIS/"/>
+  		<meta property="og:description" content="CV présentant Anaïs Martell un développeuse web freelance motivée, travailleuse et enthousiaste"/>
    		<!--référencement navigateur-->
     	<meta name="author" content="Anaïs Martell" />
     	<meta name="publisher" content="Anaïs Martell" />
@@ -47,7 +47,7 @@
                         </ul>
                         <ul>
                            <li>Linkdln</li>
-                            <li><a href="https://www.linkedin.com/in/ana%C3%AFs-martell-b8571412a/" alt="profil linkedin anaïs martell" target="_blank">Voir mon profil</a></li>
+                            <li><a href="https://www.linkedin.com/in/ana%C3%AFs-martell-b8571412a/" target="_blank">Voir mon profil</a></li>
                         </ul>
                         <ul>
                             <li>Skype</li>
@@ -179,7 +179,7 @@
                         <h3 class="structure">SIFT SOLUTIONS</h3>
                         <p class="intitule">Product Manager</p>
                         <p class="description">Chargée de la conception et du développement d'un SaaS: 
-                        <a href="https://www.sift-solutions.com/" alt="sift solutions plateforme" target="_blank">Sift Solutions</a>. 
+                        <a href="https://www.sift-solutions.com/" target="_blank">Sift Solutions</a>. 
                         Missions de stratégie et de gestion de projet: définition de la vision produit, 
                         mise en place et coordination des évolutions avec les prestataires, formulation des retours, 
                         test et validation, rédaction du cahier des charges fonctionnel, pilotage et optimisation du 
@@ -259,7 +259,7 @@
                         </div>
                     </div>
                 </section><!--End of section recommandations-->
-            </section><!--End of section maincontentright-->
+            </div><!--End of section maincontentright-->
         </div><!--End of bloc_right-->
     </body>
 </html>
