correction end tag

--- a/index.html
+++ b/index.html
@@ -260,6 +260,6 @@
                     </div>
                 </section><!--End of section recommandations-->
             </div><!--End of section maincontentright-->
-        </div><!--End of bloc_right-->
+        </section><!--End of bloc_right-->
     </body>
 </html>
