--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </ul>
                         <ul>
                             <li>Email</li>
-                            <li><a href="mailto:martell.anais@gmail.com">martell.anais@gmail.com</li></a>
+                            <li><a href="mailto:martell.anais@gmail.com">martell.anais@gmail.com</a></li>
                         </ul>
                         <ul>
                            <li>Linkdln</li>
